# campus

./: .gitignore  AGENTS.md  BUILD.md  DEPLOY.md  MIGRATION_CHANGES_NEEDED.md  README.md  check_postgres.sh  main.py  pyproject.toml  pyrightconfig.json  run_all_methods_test.py  run_migration_tests.py  run_tests.py  setup_testing.py  start_testing.py  test_client_refactor.py  test_validate.py  test_vault_refactor.py  testannot.py  update_imports.py  wsgi.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  init-multi-db.sql  post-create.sh
.githooks/: pre-push
apps/: __init__.py  factory.py
campus/: README.md  __init__.py  config.py  logging_config.py
campus/apps/: README.md  __init__.py  factory.py  install.sh  pyproject.toml
campus/apps/api/: __init__.py
campus/apps/api/routes/: __init__.py  admin.py  circles.py  clients.py  emailotp.py  events.py  session.py  users.py
campus/apps/campusauth/: __init__.py  authentication.py  context.py  routes.py
campus/apps/common/models/: __init__.py  circle.py  credentials.py  session.py  user.py
campus/apps/common/models/emailotp/: __init__.py
campus/apps/common/models/emailotp/templates/: email.txt
campus/apps/common/models/source/: __init__.py
campus/apps/common/webauth/: http.py
campus/apps/common/webauth/oauth2/: authorization_code.py
campus/apps/errors/: api_errors.py
campus/apps/models/: base.py  circle.py  credentials.py  session.py  user.py
campus/apps/models/emailotp/: __init__.py
campus/apps/models/source/: __init__.py
campus/apps/oauth/: __init__.py  discord.py  github.py  google.py
campus/apps/webauth/: __init__.py  base.py  http.py  token.py
campus/apps/webauth/oauth2/: authorization_code.py  base.py
campus/client/: README.md  __init__.py  base.py  campus.py  circles.py  config.py  core.py  errors.py  install.sh  interface.py  pyproject.toml  users.py  vault.py  vault_access.py  vault_client.py  wrapper.py
campus/client/apps/: __init__.py  admin.py  circles.py  users.py
campus/client/docs/: api-reference.md  http-verbs.md
campus/client/vault/: __init__.py  access.py  client.py  vault.py
campus/common/: README.md  __init__.py  env.py  flask.py  install.sh  introspect.py  pyproject.toml
campus/common/devops/: __init__.py  deploy.py
campus/common/errors/: __init__.py  api_errors.py  auth_errors.py  base.py  handlers.py  token_errors.py  validation.py
campus/common/flask/: __init__.py
campus/common/flask_campus/: __init__.py  parameter.py
campus/common/http/: __init__.py  default.py  errors.py  interface.py
campus/common/integration/: __init__.py  config.py  schema.py
campus/common/integration/discord/: api.json
campus/common/integration/google/: pubsub.json
campus/common/schema/: README.md  __init__.py  base.py  openapi.py
campus/common/utils/: datacls.py  diff.py  secret.py  uid.py  url.py  utc_time.py
campus/common/validation/: __init__.py  flask.py  name.py  record.py
campus/common/webauth/: __init__.py  base.py  header.py  http.py  token.py
campus/common/webauth/http/: __init__.py
campus/common/webauth/oauth2/: __init__.py  authorization_code.py  base.py  client_credentials.py  device_authorization.py
campus/models/: __init__.py  base.py  circle.py  credentials.py  event.py  install.sh  pyproject.toml  session.py  token.py  user.py
campus/models/emailotp/: __init__.py  template.py
campus/models/session/: __init__.py  auth.py  login.py
campus/models/source/: __init__.py  sourcetype.py
campus/models/webauth/: __init__.py  base.py  header.py  http.py  token.py
campus/models/webauth/http/: __init__.py  header.py
campus/models/webauth/oauth2/: __init__.py  authorization_code.py  base.py  client_credentials.py
campus/storage/: README.md  __init__.py  errors.py  install.sh  pyproject.toml  query.py  testing.py
campus/storage/collections/: __init__.py
campus/storage/collections/backend/: mongodb.py
campus/storage/documents/: __init__.py  interface.py
campus/storage/documents/backend/: __init__.py  memory.py  mongodb.py
campus/storage/objects/: __init__.py  interface.py
campus/storage/objects/backend/: __init__.py  local.py  railway.py
campus/storage/tables/: __init__.py  interface.py
campus/storage/tables/backend/: __init__.py  postgres.py  sqlite.py
campus/vault/: README.md  __init__.py  access.py  access_routes.py  auth.py  client.py  client_routes.py  credentials.py  db.py  install.sh  model.py  pyproject.toml  routes.py  vault.py
campus/vault/routes/: __init__.py  access.py  client.py  clients.py  vault.py  vaults.py
campus/workspace/: README.md  __init__.py  install.sh  pyproject.toml
docs/: AGENTS.md  CONTRIBUTING.md  DEPLOY.md  GETTING-STARTED.md  PACKAGING.md  README.md  STYLE-GUIDE.md  TESTING-GUIDE.md  api-gaps-and-planned-endpoints.md  architecture.md  atlassian-api-design-guidelines-raw.txt  campus-api-schema.md  campus-client-branch-progress.md  campus-schema-draft.xlsx  client-configuration.md  development-guidelines.md  git-dependencies-guide.md  implementation-plan-assignments.md  integration-test-migration-status.md  integration-test-refactor-plan.md  integration-test-refactor.md  migration-protocol.md  migration-vault-to-client.md  packaging-architecture.md  subpackaging-plan.md  test-plan-resource-clients.md  test-plan.md  test-refactoring-plan.md  testing-strategies.md  tracing-test-migration-blockers.md  tracing-test-migration-solution.md
migrations/: 001_add_assignments_table.py  002_add_submissions_table.py  003_add_api_traces_table.py  _init.py
scripts/: background-pull.sh  campus-client.py  check_mongodb.sh  check_postgres.sh  check_vault.py  clean-build.sh  init_auth_sessions.py  init_clients_tables.py  init_credentials_tables.py  init_login_sessions.py  init_tables.py  init_users_table.py  init_vault_table.py  refresh-dependencies.sh  remove-unused-local-branches.sh  setup_campus_vault.py
storage/: __init__.py
tests/: README.md  all_client_methods.py  method_chain.py  migration_test_helpers.py  run_client_tests.py  run_tests.py  sanity_check.py  shared.py  test_circles.py  (+16 more)
(+433 files in other folders)
