# Campus - Deployment Orchestrator & Client Library
# This configuration supports deployment orchestration and client library distribution
# Deployment mode determined by 'deploy' file content

[tool.poetry]
name = "campus-suite"
version = "0.1.0"
description = "Campus Suite - Complete education management platform deployment orchestrator and client library"
authors = ["Ng Jun Siang <ngjunsiang@gmail.com>"]
readme = "README.md"
packages = [{include = "campus"}]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"

# Client library dependencies (minimal for HTTP requests)
requests = "^2.32.4"

# Deployment orchestration dependencies (all services) - required for deployment
flask = "^3.0.0"
bcrypt = "^4.2.1"
psycopg2-binary = "^2.9.0"
pymongo = {extras = ["srv"], version = "^4.13.2"}
gunicorn = "^21.2.0"
werkzeug = "^3.0.0"

# Campus internal dependencies
campus-yapper = {git = "https://github.com/nyjc-computing/yapper-python.git"}

[tool.poetry.extras]

[tool.poetry.group.dev.dependencies]
pylint = "^3.0"

[tool.poetry.scripts]
campus = "main:main"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
