[tool.poetry]
name = "campus-apps"
version = "0.1.0"
description = "Web applications and services"
authors = ["Ng Jun Siang <ngjunsiang@gmail.com>"]
packages = [
    {include = "campus/apps", from = "../.."},
]

[tool.poetry.dependencies]
python = "^3.11"
campus-common = {path = "../common", develop = true}
campus-vault = {path = "../vault", develop = true}
campus-storage = {path = "../storage", develop = true}
campus-client = {path = "../client", develop = true}
campus-models = {path = "../models", develop = true}
flask = "^3.0.0"
gunicorn = "^21.2.0"
requests = "^2.32.4"
werkzeug = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
