[tool.poetry]
name = "campus-suite-apps"
version = "0.1.0"
description = "Web applications and services"
authors = ["Ng Jun Siang <ngjunsiang@gmail.com>"]
packages = [
    {include = "campus/apps", from = "../.."},
]

[tool.poetry.dependencies]
python = "^3.11"
campus-suite-common = {path = "../common", develop = true}
campus-suite-vault = {path = "../vault", develop = true}
campus-suite-storage = {path = "../storage", develop = true}
campus-suite-client = {path = "../client", develop = true}
campus-suite-models = {path = "../models", develop = true}
flask = "^3.0.0"
gunicorn = "^21.2.0"
requests = "^2.32.4"
werkzeug = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
