[tool.poetry]
name = "campus-suite-storage"
version = "0.1.0"
description = "Storage backends for collections and tables"
authors = ["Ng Jun Siang <ngjunsiang@gmail.com>"]
packages = [
    {include = "campus/storage", from = "../.."},
]

[tool.poetry.dependencies]
python = "^3.11"
campus-suite-common = {path = "../common", develop = true}
campus-suite-vault = {path = "../vault", develop = true}
psycopg2-binary = "^2.9.0"
pymongo = {extras = ["srv"], version = "^4.13.2"}

[tool.poetry.group.dev.dependencies]
pylint = "^3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
