[tool.poetry]
name = "campus-suite-vault"
version = "0.1.0"
description = "Secure vault service for managing secrets"
authors = ["Ng Jun Siang <ngjunsiang@gmail.com>"]
packages = [
    {include = "campus/vault", from = "../.."},
]

[tool.poetry.dependencies]
python = "^3.11"
campus-suite-common = {path = "../common", develop = true}
psycopg2-binary = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
