[tool.poetry]
name = "campus-workspace"
version = "0.1.0"
description = "Campus ecosystem meta-package - complete Campus system for deployment"
authors = ["Ng Jun Siang <ngjunsiang@gmail.com>"]
readme = "README.md"
packages = [{include = "campus"}]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"

# All the dependencies from individual packages
# Common dependencies
flask = "^3.0.0"
bcrypt = "^4.2.1"

# Vault dependencies  
psycopg2-binary = "^2.9.0"

# Storage dependencies
pymongo = {extras = ["srv"], version = "^4.8.0"}

# Client dependencies
requests = "^2.32.4"

# Apps dependencies (web server)
gunicorn = "^21.2.0"
werkzeug = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
