[tool.poetry]
name = "campus-suite-workspace"
version = "0.1.0"
description = "Campus ecosystem meta-package - complete Campus system for deployment"
authors = ["Ng Jun Siang <ngjunsiang@gmail.com>"]
readme = "README.md"
packages = [
    {include = "campus/workspace", from = "../.."}
]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"

# Include all campus packages as dependencies
campus-suite-common = {path = "../common", develop = true}
campus-suite-vault = {path = "../vault", develop = true}
campus-suite-storage = {path = "../storage", develop = true}
campus-suite-client = {path = "../client", develop = true}
campus-suite-models = {path = "../models", develop = true}
campus-suite-apps = {path = "../apps", develop = true}

[tool.poetry.group.dev.dependencies]
pylint = "^3.0"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
